junit 4 -> 5, update test dependencies