@@ -1,130 +1,84 @@
 package com.hivemq.extensions.influxdb.configuration;
 
 import com.hivemq.extension.sdk.api.annotations.NotNull;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.TemporaryFolder;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.io.TempDir;
 
-import java.io.File;
 import java.io.IOException;
-import java.nio.charset.Charset;
 import java.nio.file.Files;
-import java.util.Arrays;
-import java.util.Collections;
+import java.nio.file.Path;
 import java.util.List;
 import java.util.Map;
 
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.*;
 
-public class InfluxDbConfigurationTest {
+class InfluxDbConfigurationTest {
 
-    @Rule
-    public TemporaryFolder folder = new TemporaryFolder();
+    private @NotNull InfluxDbConfiguration influxDbConfiguration;
+    private @NotNull Path file;
 
-    private File root;
-
-    private File file;
-
-    @Before
-    public void set_up() throws IOException {
-        root = folder.getRoot();
-        String fileName = "influxdb.properties";
-        file = folder.newFile(fileName);
+    @BeforeEach
+    void setUp(final @TempDir @NotNull Path tempDir) {
+        influxDbConfiguration = new InfluxDbConfiguration(tempDir.toFile());
+        file = tempDir.resolve("influxdb.properties");
     }
 
     @Test
-    public void validateConfiguration_ok() throws IOException {
+    void validateConfiguration_ok() throws IOException {
+        Files.write(file, List.of("host:localhost", "port:3000"));
 
-        final List<String> lines = Arrays.asList("host:localhost", "port:3000");
-        Files.write(file.toPath(), lines, Charset.forName("UTF-8"));
-
-        final InfluxDbConfiguration propertiesReader = new InfluxDbConfiguration(root);
-
-        propertiesReader.readPropertiesFromFile();
-        final boolean validateConfiguration = propertiesReader.validateConfiguration();
-
-        assertTrue(validateConfiguration);
+        assertTrue(influxDbConfiguration.readPropertiesFromFile());
+        assertTrue(influxDbConfiguration.validateConfiguration());
     }
 
     @Test
-    public void validateConfiguration_wrong_port() throws IOException {
+    void validateConfiguration_wrong_port() throws IOException {
+        Files.write(file, List.of("host:localhost", "port:-3000"));
 
-        final List<String> lines = Arrays.asList("host:localhost", "port:-3000");
-        Files.write(file.toPath(), lines, Charset.forName("UTF-8"));
-
-        final InfluxDbConfiguration propertiesReader = new InfluxDbConfiguration(root);
-
-        propertiesReader.readPropertiesFromFile();
-        final boolean validateConfiguration = propertiesReader.validateConfiguration();
-
-        assertFalse(validateConfiguration);
+        assertTrue(influxDbConfiguration.readPropertiesFromFile());
+        assertFalse(influxDbConfiguration.validateConfiguration());
     }
 
     @Test
-    public void validateConfiguration_host_missing() throws IOException {
+    void validateConfiguration_host_missing() throws IOException {
+        Files.write(file, List.of("port:3000"));
 
-        final List<String> lines = Collections.singletonList("port:3000");
-        Files.write(file.toPath(), lines, Charset.forName("UTF-8"));
-
-        final InfluxDbConfiguration propertiesReader = new InfluxDbConfiguration(root);
-
-        propertiesReader.readPropertiesFromFile();
-        final boolean validateConfiguration = propertiesReader.validateConfiguration();
-
-        assertFalse(validateConfiguration);
+        assertTrue(influxDbConfiguration.readPropertiesFromFile());
+        assertFalse(influxDbConfiguration.validateConfiguration());
     }
 
     @Test
-    public void validateConfiguration_port_missing() throws IOException {
+    void validateConfiguration_port_missing() throws IOException {
+        Files.write(file, List.of("host:localhost"));
 
-        final List<String> lines = Collections.singletonList("host:localhost");
-        Files.write(file.toPath(), lines, Charset.forName("UTF-8"));
-
-        final InfluxDbConfiguration propertiesReader = new InfluxDbConfiguration(root);
-
-        propertiesReader.readPropertiesFromFile();
-        final boolean validateConfiguration = propertiesReader.validateConfiguration();
-
-        assertFalse(validateConfiguration);
+        assertTrue(influxDbConfiguration.readPropertiesFromFile());
+        assertFalse(influxDbConfiguration.validateConfiguration());
     }
 
     @Test
-    public void validateConfiguration_port_null() throws IOException {
+    void validateConfiguration_port_null() throws IOException {
+        Files.write(file, List.of("host:localhost", "port:"));
 
-        final List<String> lines = Arrays.asList("host:localhost", "port:");
-        Files.write(file.toPath(), lines, Charset.forName("UTF-8"));
+        assertTrue(influxDbConfiguration.readPropertiesFromFile());
+        assertFalse(influxDbConfiguration.validateConfiguration());
 
-        final InfluxDbConfiguration propertiesReader = new InfluxDbConfiguration(root);
-
-        propertiesReader.readPropertiesFromFile();
-        assertNull(propertiesReader.getProperty("port"));
-
-        final boolean validateConfiguration = propertiesReader.validateConfiguration();
-
-        assertFalse(validateConfiguration);
+        assertNull(influxDbConfiguration.getProperty("port"));
     }
 
     @Test
-    public void validateConfiguration_host_null() throws IOException {
+    void validateConfiguration_host_null() throws IOException {
+        Files.write(file, List.of("host:", "port:3000"));
 
-        final List<String> lines = Arrays.asList("host:", "port:3000");
-        Files.write(file.toPath(), lines, Charset.forName("UTF-8"));
+        assertTrue(influxDbConfiguration.readPropertiesFromFile());
+        assertFalse(influxDbConfiguration.validateConfiguration());
 
-        final InfluxDbConfiguration propertiesReader = new InfluxDbConfiguration(root);
-
-        propertiesReader.readPropertiesFromFile();
-        assertNull(propertiesReader.getProperty("host"));
-
-        final boolean validateConfiguration = propertiesReader.validateConfiguration();
-
-        assertFalse(validateConfiguration);
+        assertNull(influxDbConfiguration.getProperty("host"));
     }
 
     @Test
-    public void all_properties_empty() throws IOException {
-
-        final List<String> lines = Arrays.asList(
+    void all_properties_empty() throws IOException {
+        Files.write(file, List.of(
                 "mode:",
                 "host:",
                 "port:",
@@ -134,55 +88,45 @@ public class InfluxDbConfigurationTest {
                 "database:",
                 "connectTimeout:",
                 "reportingInterval:",
-                "auth:");
-        Files.write(file.toPath(), lines, Charset.forName("UTF-8"));
+                "auth:"));
 
-        final InfluxDbConfiguration propertiesReader = new InfluxDbConfiguration(root);
+        assertTrue(influxDbConfiguration.readPropertiesFromFile());
+        assertFalse(influxDbConfiguration.validateConfiguration());
 
-        propertiesReader.readPropertiesFromFile();
-
-
-        assertFalse(propertiesReader.validateConfiguration());
-        assertEquals("http", propertiesReader.getMode());
-        assertTrue(propertiesReader.getTags().isEmpty());
-        assertEquals("", propertiesReader.getPrefix());
-        assertEquals("http", propertiesReader.getProtocol());
-        assertEquals("hivemq", propertiesReader.getDatabase());
-        assertEquals(5000, propertiesReader.getConnectTimeout());
-        assertEquals(1, propertiesReader.getReportingInterval());
-        assertNull(propertiesReader.getAuth());
-        assertNull(propertiesReader.getHost());
-        assertNull(propertiesReader.getPort());
+        assertEquals("http", influxDbConfiguration.getMode());
+        assertTrue(influxDbConfiguration.getTags().isEmpty());
+        assertEquals("", influxDbConfiguration.getPrefix());
+        assertEquals("http", influxDbConfiguration.getProtocol());
+        assertEquals("hivemq", influxDbConfiguration.getDatabase());
+        assertEquals(5000, influxDbConfiguration.getConnectTimeout());
+        assertEquals(1, influxDbConfiguration.getReportingInterval());
+        assertNull(influxDbConfiguration.getAuth());
+        assertNull(influxDbConfiguration.getHost());
+        assertNull(influxDbConfiguration.getPort());
     }
 
     @Test
-    public void all_properties_null() throws IOException {
+    void all_properties_null() throws IOException {
+        Files.write(file, List.of());
 
-        final List<String> lines = Collections.emptyList();
-        Files.write(file.toPath(), lines, Charset.forName("UTF-8"));
+        assertTrue(influxDbConfiguration.readPropertiesFromFile());
+        assertFalse(influxDbConfiguration.validateConfiguration());
 
-        final InfluxDbConfiguration propertiesReader = new InfluxDbConfiguration(root);
-
-        propertiesReader.readPropertiesFromFile();
-        final String mode = propertiesReader.getMode();
-
-        assertFalse(propertiesReader.validateConfiguration());
-        assertEquals("http", propertiesReader.getMode());
-        assertTrue(propertiesReader.getTags().isEmpty());
-        assertEquals("", propertiesReader.getPrefix());
-        assertEquals("http", propertiesReader.getProtocol());
-        assertEquals("hivemq", propertiesReader.getDatabase());
-        assertEquals(5000, propertiesReader.getConnectTimeout());
-        assertEquals(1, propertiesReader.getReportingInterval());
-        assertNull(propertiesReader.getAuth());
-        assertNull(propertiesReader.getHost());
-        assertNull(propertiesReader.getPort());
+        assertEquals("http", influxDbConfiguration.getMode());
+        assertTrue(influxDbConfiguration.getTags().isEmpty());
+        assertEquals("", influxDbConfiguration.getPrefix());
+        assertEquals("http", influxDbConfiguration.getProtocol());
+        assertEquals("hivemq", influxDbConfiguration.getDatabase());
+        assertEquals(5000, influxDbConfiguration.getConnectTimeout());
+        assertEquals(1, influxDbConfiguration.getReportingInterval());
+        assertNull(influxDbConfiguration.getAuth());
+        assertNull(influxDbConfiguration.getHost());
+        assertNull(influxDbConfiguration.getPort());
     }
 
     @Test
-    public void all_properties_have_correct_values() throws IOException {
-
-        final List<String> lines = Arrays.asList(
+    void all_properties_have_correct_values() throws IOException {
+        Files.write(file, List.of(
                 "mode:tcp",
                 "host:hivemq.monitoring.com",
                 "port:3000",
@@ -192,42 +136,34 @@ public class InfluxDbConfigurationTest {
                 "database:test-hivemq",
                 "connectTimeout:10000",
                 "reportingInterval:5",
-                "auth:username:password");
-        Files.write(file.toPath(), lines, Charset.forName("UTF-8"));
+                "auth:username:password"));
 
-        final InfluxDbConfiguration propertiesReader = new InfluxDbConfiguration(root);
-        propertiesReader.readPropertiesFromFile();
+        assertTrue(influxDbConfiguration.readPropertiesFromFile());
+        assertTrue(influxDbConfiguration.validateConfiguration());
 
-        @NotNull final Map<String, String> tags = propertiesReader.getTags();
-
-        assertTrue(propertiesReader.validateConfiguration());
-        assertEquals("tcp", propertiesReader.getMode());
+        final Map<String, String> tags = influxDbConfiguration.getTags();
+        assertEquals("tcp", influxDbConfiguration.getMode());
         assertEquals(2, tags.size());
         assertEquals("hivemq1", tags.get("host"));
         assertEquals("3.4.1", tags.get("version"));
-        assertEquals("node1", propertiesReader.getPrefix());
-        assertEquals("tcp", propertiesReader.getProtocol());
-        assertEquals("test-hivemq", propertiesReader.getDatabase());
-        assertEquals(10000, propertiesReader.getConnectTimeout());
-        assertEquals(5, propertiesReader.getReportingInterval());
-        assertEquals("username:password", propertiesReader.getAuth());
-        assertEquals("hivemq.monitoring.com", propertiesReader.getHost());
-        assertEquals(3000, propertiesReader.getPort().intValue());
+        assertEquals("node1", influxDbConfiguration.getPrefix());
+        assertEquals("tcp", influxDbConfiguration.getProtocol());
+        assertEquals("test-hivemq", influxDbConfiguration.getDatabase());
+        assertEquals(10000, influxDbConfiguration.getConnectTimeout());
+        assertEquals(5, influxDbConfiguration.getReportingInterval());
+        assertEquals("username:password", influxDbConfiguration.getAuth());
+        assertEquals("hivemq.monitoring.com", influxDbConfiguration.getHost());
+        assertEquals(3000, influxDbConfiguration.getPort());
     }
 
     @Test
-    public void tags_invalid_configured() throws IOException {
+    void tags_invalid_configured() throws IOException {
+        Files.write(file, List.of("tags:host=hivemq1;version=;use=monitoring"));
 
-        final List<String> lines = Collections.singletonList(
-                "tags:host=hivemq1;version=;use=monitoring");
-        Files.write(file.toPath(), lines, Charset.forName("UTF-8"));
+        assertTrue(influxDbConfiguration.readPropertiesFromFile());
+        assertFalse(influxDbConfiguration.validateConfiguration());
 
-        final InfluxDbConfiguration propertiesReader = new InfluxDbConfiguration(root);
-        propertiesReader.readPropertiesFromFile();
-
-        final Map<String, String> tags = propertiesReader.getTags();
-
-        assertFalse(propertiesReader.validateConfiguration());
+        final Map<String, String> tags = influxDbConfiguration.getTags();
         assertEquals(2, tags.size());
         assertEquals("hivemq1", tags.get("host"));
         assertEquals("monitoring", tags.get("use"));
@@ -235,108 +171,72 @@ public class InfluxDbConfigurationTest {
     }
 
     @Test
-    public void tags_has_only_semicolons() throws IOException {
+    void tags_has_only_semicolons() throws IOException {
+        Files.write(file, List.of("tags:;;;;;;"));
 
-        final List<String> lines = Collections.singletonList(
-                "tags:;;;;;;");
-        Files.write(file.toPath(), lines, Charset.forName("UTF-8"));
+        assertTrue(influxDbConfiguration.readPropertiesFromFile());
+        assertFalse(influxDbConfiguration.validateConfiguration());
 
-        final InfluxDbConfiguration propertiesReader = new InfluxDbConfiguration(root);
-        propertiesReader.readPropertiesFromFile();
-
-        final Map<String, String> tags = propertiesReader.getTags();
-
+        final Map<String, String> tags = influxDbConfiguration.getTags();
         assertEquals(0, tags.size());
     }
 
     @Test
-    public void tags_has_only_a_key() throws IOException {
+    void tags_has_only_a_key() throws IOException {
+        Files.write(file, List.of("tags:okay"));
 
-        final List<String> lines = Collections.singletonList(
-                "tags:okay");
-        Files.write(file.toPath(), lines, Charset.forName("UTF-8"));
+        assertTrue(influxDbConfiguration.readPropertiesFromFile());
+        assertFalse(influxDbConfiguration.validateConfiguration());
 
-        final InfluxDbConfiguration propertiesReader = new InfluxDbConfiguration(root);
-        propertiesReader.readPropertiesFromFile();
-
-        final Map<String, String> tags = propertiesReader.getTags();
-
+        final Map<String, String> tags = influxDbConfiguration.getTags();
         assertEquals(0, tags.size());
     }
 
     @Test
-    public void tags_has_correct_tag_but_missing_semicolon() throws IOException {
+    void tags_has_correct_tag_but_missing_semicolon() throws IOException {
+        Files.write(file, List.of("tags:key=value"));
 
-        final List<String> lines = Collections.singletonList(
-                "tags:key=value");
-        Files.write(file.toPath(), lines, Charset.forName("UTF-8"));
+        assertTrue(influxDbConfiguration.readPropertiesFromFile());
+        assertFalse(influxDbConfiguration.validateConfiguration());
 
-        final InfluxDbConfiguration propertiesReader = new InfluxDbConfiguration(root);
-        propertiesReader.readPropertiesFromFile();
-
-        final Map<String, String> tags = propertiesReader.getTags();
-
+        final Map<String, String> tags = influxDbConfiguration.getTags();
         assertEquals(1, tags.size());
     }
 
     @Test
-    public void properties_that_are_numbers_have_invalid_string() throws IOException {
+    void properties_that_are_numbers_have_invalid_string() throws IOException {
+        Files.write(file, List.of("host:test", "port:800000", "reportingInterval:0", "connectTimeout:-1"));
 
-        final List<String> lines = Arrays.asList("host:test",
-                "port:800000", "reportingInterval:0", "connectTimeout:-1");
-        Files.write(file.toPath(), lines, Charset.forName("UTF-8"));
-
-        final InfluxDbConfiguration propertiesReader = new InfluxDbConfiguration(root);
-        propertiesReader.readPropertiesFromFile();
-
+        assertTrue(influxDbConfiguration.readPropertiesFromFile());
         //false because port is out of range
-        assertFalse(propertiesReader.validateConfiguration());
+        assertFalse(influxDbConfiguration.validateConfiguration());
 
         //default values because values in file are no valid (zero or negative number)
-        assertEquals(5000, propertiesReader.getConnectTimeout());
-        assertEquals(1, propertiesReader.getReportingInterval());
+        assertEquals(5000, influxDbConfiguration.getConnectTimeout());
+        assertEquals(1, influxDbConfiguration.getReportingInterval());
     }
 
     @Test
-    public void validateConfiguration_cloud_token_missing() throws IOException {
+    void validateConfiguration_cloud_token_missing() throws IOException {
+        Files.write(file, List.of("mode:cloud", "host:localhost", "bucket:mybucket"));
 
-        final List<String> lines = Arrays.asList("mode:cloud", "host:localhost", "bucket:mybucket");
-        Files.write(file.toPath(), lines, Charset.forName("UTF-8"));
-
-        final InfluxDbConfiguration propertiesReader = new InfluxDbConfiguration(root);
-
-        propertiesReader.readPropertiesFromFile();
-        final boolean validateConfiguration = propertiesReader.validateConfiguration();
-
-        assertFalse(validateConfiguration);
+        assertTrue(influxDbConfiguration.readPropertiesFromFile());
+        assertFalse(influxDbConfiguration.validateConfiguration());
     }
 
     @Test
-    public void validateConfiguration_cloud_bucket_missing() throws IOException {
+    void validateConfiguration_cloud_bucket_missing() throws IOException {
+        Files.write(file, List.of("mode:cloud", "host:localhost", "token:mytoken"));
 
-        final List<String> lines = Arrays.asList("mode:cloud", "host:localhost", "token:mytoken");
-        Files.write(file.toPath(), lines, Charset.forName("UTF-8"));
-
-        final InfluxDbConfiguration propertiesReader = new InfluxDbConfiguration(root);
-
-        propertiesReader.readPropertiesFromFile();
-        final boolean validateConfiguration = propertiesReader.validateConfiguration();
-
-        assertFalse(validateConfiguration);
+        assertTrue(influxDbConfiguration.readPropertiesFromFile());
+        assertFalse(influxDbConfiguration.validateConfiguration());
     }
 
     @Test
-    public void validateConfiguration_cloud_ok() throws IOException {
+    void validateConfiguration_cloud_ok() throws IOException {
+        Files.write(file, List.of("mode:cloud", "host:localhost", "token:mytoken", "bucket:mybucket"));
 
-        final List<String> lines = Arrays.asList("mode:cloud", "host:localhost", "token:mytoken", "bucket:mybucket");
-        Files.write(file.toPath(), lines, Charset.forName("UTF-8"));
-
-        final InfluxDbConfiguration propertiesReader = new InfluxDbConfiguration(root);
-
-        propertiesReader.readPropertiesFromFile();
-        final boolean validateConfiguration = propertiesReader.validateConfiguration();
-
-        assertFalse(validateConfiguration);
+        assertTrue(influxDbConfiguration.readPropertiesFromFile());
+        assertFalse(influxDbConfiguration.validateConfiguration());
     }
-
 }
